<resources>
    <string name="app_name">Su-Travel</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_Map">Map</string>
    <string name="title_Profile">Profile</string>
    <string name="title_activity_description_page">description_page</string>
    <string name="title_activity_favorite">Favorite</string>
    <string name="title_activity_planlist">Planlist</string>
    <string name="title_activity_plandetail">Plan Details</string>
    <string name="username_hint_login">Please enter user name</string>
    <string name="username_hint_register">User name: only numbers and English characters</string>
    <string name="password_hint_login">Please enter password</string>
    <string name="password_hint_register">Password: only numbers and English characters</string>
    <string name="re_password_hint">Re-enter the password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="already_account">Already had an account?</string>
    <string name="to_register">Register now</string>
    <string name="to_login">Login now</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="warning1">Please enter correct username and password.</string>
    <string name="warning2">Please enter information in correct form.</string>
    <string name="warning3">The two passwords you entered did not match.</string>
    <string name="about_us">We are Watermelon! Thanks for using our App!</string>
    <string name="about_us2">If you have interests, please contact us!</string>
    <string name="description1">Bailu Parkis one of major public parks located in the Chaoyang District of Beijing, China. It is an ecological park with high greenery coverage created by combining plant landscaping and hard landscaping in a nature-based environment. Egret Park is located on the shore of Dushu Lake and is named after the egrets that often roost here.</string>
    <string name="description2">Jinji Lake is a tributary of Taihu Lake, with more than 10 inlets and outlets. It receives water from Lou River in the north, Xiangmen Pond and Turnip Pond in the west, and the outlet water is mainly dipped into Wusong River through Xitang River. In Jinji Lake, there are musical fountain, Li Gong Di, Peach Blossom Island, Jinji Lake Bridge Waterfall and other attractions.</string>
    <string name="description3">It is the only comprehensive habitat simulation exhibit in Suzhou that integrates wildlife protection and breeding, science education, ecological tour and recreation.Two of the world’s three known living Yangtze Giant Softshell Turtles are in this zoo, which are the only hope to save the Yangtze Giant Softshell Turtle. A good place for animal and nature lovers.</string>
    <string name="description4">It covers four thematic scenic spots, including Forest World, Forest Water World, Four Seasons Constant Temperature Water Park and Suzhou Paradise Botanical Garden. Each aquatic entertainment project has the forest characteristic, as well as multiple integrated businesses such as boutique lodging, specialty restaurants and thematic performances.</string>
    <string name="description5">Tianping Mountain is a steep and dangerous mountain, known as Baiyun Mountain in ancient times, which is the burial place of the ancestor of Fan Zhongyan, a famous minister in the Northern Song Dynasty. The scenic spot covers an area of nearly 100 hectares and is famous for its "red maples, strange rocks and clear springs", with 18 scenic spots.</string>
    <string name="description6">Panmen Scenic Area was built on the base of some historic sites by using the architectural structure of classical gardens. The scenery area centered on Panmen City Gate consists of many scenic spots. Amongst them, Ruiguang Pagoda, Panmen City Gate and Wumen Bridge are praised as three fine sceneries. The traditional wedding show is also enjoyable.</string>
    <string name="description7">There are four basic displays in Suzhou Museum, namely, Wu Di Treasures, Wu Tower National Treasures, Wu Zhong Feng Yi, and Wu Men Calligraphy and Painting, with a total collection of 24,729 pieces/sets, 9,647 pieces/sets of precious cultural relics, including 222 pieces/sets of Grade I, 829 pieces/sets of Grade II, and 8,596 pieces/sets of Grade III.</string>
    <string name="description8">Suzhou Center is the largest, best located and most comprehensive urban function carrier in Suzhou, with a variety of functions such as finance and business, commerce and culture, residence and leisure, etc. It has a variety of business formats such as office buildings, commerce, hotels, serviced apartments, culture, entertainment and restaurants.</string>
    <string name="description9">Huqiu Wetland Park is one of the "four corners of the landscape" identified in Suzhou\'s urban planning, an important "green wedge" in the "two belts, three rings and five wedges" green space system and an important "ecological green lung" in the northwest of Suzhou, and an important vehicle to accelerate of the construction of ecological civilization in Suzhou.</string>
    <string name="description10">Located in Suzhou Yangcheng Lake Peninsula Tourism Resort, Huayi Brothers Movie World has a total investment of 3.5 billion yuan and covers an area of about 400 acres, with 34 kinds of interactive entertainment programs. In addition, there are 11 performing arts shows, 7 movie-themed restaurants, 21 food outlets and more than 40 theme stores.</string>
    <string name="description11">Moon Bay is located in the "Suzhou Dushu Lake Science and Education Innovation Zone" of Suzhou Industrial Park (SIP), north of Moon Bay Square, south of Suzhou Dushu Lake Worldview Hotel and west of Qi Yue Street. The alleged water area is about 51,800 square meters, named after its full moon shape. Enjoy and embrace the moonlight with your friends.</string>
    <string name="description12">The completion and opening of Dushu Lake Church has provided a high-grade activity place for the majority of Chinese and foreign Christian believers in Suzhou, increasing the cultural connotation of the park and improving the living environment. At the same time, it provides the necessary facilities for the standardization of religious activities.</string>
    <string name="description13">Longhu Shishan Tianjie is the largest one-stop all-storey shopping center in Suzhou, with 250 meters of main exhibition surface along the street, 360° perfect view of the sunken plaza, and the characteristic cross-storey sky-rise of Jiangnan. It is suitable for gathering, dating, dining and any other activities to enjoy your free time and chill.</string>
   </resources>
