<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="110dp">
    <TextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/bg_warning"
        android:textSize="16dp"
        android:lineHeight="50dp"
        android:gravity="center"
        android:textColor="@color/text_warning"
        android:textStyle="bold"
        android:visibility="gone"
        />
    <EditText
        android:id="@+id/username"
        android:layout_below="@id/warning"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:color="@color/black"
        android:hint="@string/username_hint_login"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/password_hint_login"
        android:singleLine="true"
        android:textColorHint="@color/dark_gray"
        android:layout_below="@id/username"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:hint="@string/re_password_hint"
        android:singleLine="true"
        android:textColorHint="@color/dark_gray"
        android:layout_below="@id/password"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/account_reminder"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/re_password"
        android:layout_marginTop="15dp"
        android:gravity="end"
        android:text="@string/no_account"
        android:textSize="16sp"
        android:layout_marginLeft="57dp"/>

    <TextView
        android:id="@+id/switch_link"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/account_reminder"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@id/account_reminder"
        android:text="@string/to_register"
        android:textColor="@color/link"
        android:textSize="16sp"
        android:focusable="true"
        android:clickable="true"/>

    <android.widget.Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_reminder"
        android:layout_marginTop="80dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginLeft="40dp"/>

</RelativeLayout>